k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: django-app
  labels:
    app: django
