k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: django-app
  labels:
    app: django
spec:
  type: ClusterIP
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
